force-app/main/default/objects/Campaign_Member_Status__mdt.object
<CustomObject>
    <description>This contains all possible status for campaign member</description>
    <fields>
        <fullName>Campaign_Record_Type__c</fullName>
        <description>Campaign Record types for which Campaign member statuses have to be generated.</description>
        <inlineHelpText>Leave blank, if statuses have to be generated purely by Campaign Type.</inlineHelpText>
        <label>Campaign Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>Eventbrite</fullName>
                </value>
                <value>
                    <fullName>Law Faculty</fullName>
                </value>
                <value>
                    <fullName>MonTrack</fullName>
                </value>
                <value>
                    <fullName>Non Montrack</fullName>
                </value>
                <value>
                    <fullName>SR Campaign</fullName>
                </value>
                <value>
                    <fullName>Subscription List</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>ERDA_Guest_List</fullName>
                </value>
                <value>
                    <fullName>Volunteers_Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>Campaign Type for which statuses have to be defined.</description>
        <inlineHelpText>Leave blank if statuses have to be generated by Campaign Record Type.
NOTE: If a campaign has both Type and Record Type records here, a combination of all the statuses will be generated.</inlineHelpText>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MonTrack</fullName>
                    <default>true</default>
                    <label>MonTrack</label>
                </value>
                <value>
                    <fullName>Student Recruitment Event</fullName>
                </value>
                <value>
                    <fullName>Domestic Pre App</fullName>
                </value>
                <value>
                    <fullName>Domestic Post App</fullName>
                </value>
                <value>
                    <fullName>International Pre App</fullName>
                </value>
                <value>
                    <fullName>International Post App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helps set Campaign Member status as responded</description>
        <label>Has Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helps set Campaign member status as default</description>
        <inlineHelpText>Please set at least one status per RecordType/Type as default.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Order in which the status has to be applied</description>
        <inlineHelpText>Enter a sequence number in which the order of the status&apos;s will be applied.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Member Status</label>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Campaign_Record_Type__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Has_Responded__c</columns>
        <columns>Is_Default__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Campaign Member Statuses</pluralLabel>
</CustomObject>